--- a/ghi/index.html
+++ b/ghi/index.html
@@ -7,6 +7,19 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>Conference GO!</title>
   <script type="module" src="./js/app.js"></script>
+  
+  <style>
+    
+/*
+    .card {
+  box-sizing: border-box;
+  float: center;
+  width: auto;
+  padding: 15px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2)
+  }
+*/
+  </style>
 </head>
 <body>
   <header>
@@ -43,15 +56,15 @@
     </div>
     <div class="container">
       <h2>Upcoming conferences</h2>
-      <div class="row">
+      <div class="row row-col-3">
         <div class="col">
-          <div class="card">
+          <!-- <div class="card">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Conference name</h5>
               <p class="card-text">Conference description</p>
-            </div>
-          </div>
+            </div> -->
+          <!-- </div> -->
         </div>
         <div class="col">
 
