--- a/ghi/new-conference.html
+++ b/ghi/new-conference.html
@@ -26,9 +26,11 @@
                 <a class="nav-link active" aria-current="page" href="new-location.html">New location</a>
             </li>
           </ul>
+          
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search conferences" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-success me-2" type="submit">Search</button>
+            <a class="btn btn-primary" href="attend-conference.html">Attend!</a>
           </form>
         </div>
       </div>
@@ -61,17 +63,13 @@
                 <input placeholder="Max attendees" required type="number" name="max_attendees" id="max_attendees" class="form-control">
                 <label for="max_attendees">Max attendees</label>
               </div>
-              <div class="form-floating mb-3">
-                <input placeholder="Description" required type="textarea" name="description" id="description" class="form-control">
+              <div class="mb-3">
                 <label for="description">Description</label>
-              </div>
-              <div class="form-floating mb-3">
-                <input placeholder="City" required type="text" name="city" id="city" class="form-control">
-                <label for="city">City</label>
+                <input class="form-control" rows="3" required type="textarea" name="description" id="description" >
               </div>
               <div class="mb-3">
-                <select required id="state" name="state" class="form-select">
-                  <option selected value="">Choose a state</option>
+                <select required id="location" name="location" class="form-select">
+                  <option selected value="">Choose a location</option>
                 </select>
               </div>
               <button class="btn btn-primary">Create</button>
