--- a/ghi/new-location.html
+++ b/ghi/new-location.html
@@ -26,9 +26,11 @@
                 <a class="nav-link active" aria-current="page" href="new-location.html">New location</a>
             </li>
           </ul>
+          
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search conferences" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-success me-2" type="submit">Search</button>
+            <a class="btn btn-primary" href="attend-conference.html">Attend!</a>
           </form>
         </div>
       </div>
