Prior to adding signup

--- a/ghi/attend-conference.html
+++ b/ghi/attend-conference.html
@@ -52,7 +52,7 @@
         <div class="col">
           <div class="card shadow">
             <div class="card-body">
-              <form id="create-attendee-form">
+              <form class="d-none" id="create-attendee-form">
                 <h1 class="card-title">It's Conference Time!</h1>
                 <p class="mb-3">
                   Please choose which conference
@@ -87,7 +87,7 @@
                 </div>
                 <button class="btn btn-lg btn-primary">I'm going!</button>
               </form>
-              <div class="alert alert-success d-none mb-0" id="success-message">
+              <div class="alert alert-success mb-0" id="success-message">
                 Congratulations! You're all signed up!
               </div>
             </div>
